[gd_scene load_steps=4 format=2]

[ext_resource path="res://scn/enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/meshes/enemy1/enemy1.tres" type="ArrayMesh" id=2]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -1, 0.5, 1, 1, 0.5, -1, 1, 0.5, 1, -1, 0.5, -1, -1, -0.5, 1, 1, -0.5, -1, 1, -0.5, 1, -1, -0.5, -1, 1, 0.5, 1, -1, 0.5, -1, 1, 0.5, -1, -1, 0.5, 1, 1, -0.5, 1, -1, -0.5, -1, 1, -0.5, -1, -1, -0.5, 1, 1, 0.5, 1, -1, -0.5, 1, -1, 0.5, 1, 1, -0.5, 1, 1, 0.5, -1, -1, -0.5, -1, -1, 0.5, -1, 1, -0.5, -1 )

[node name="Enemy" type="KinematicBody"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )
random_shoot_min = 5.0

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 0.85, 0, 0, 0, 0.85, 0, 0, 0, 0.85, 0, 0.305464, 0 )
mesh = ExtResource( 2 )
skeleton = NodePath("")
material/0 = null
material/1 = null
material/2 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="RayCast_front" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 50 )
collision_mask = 2

[node name="Timer_rand_shoot" type="Timer" parent="."]
one_shot = true

[node name="Timer_weapon_cooldown" type="Timer" parent="."]
one_shot = true

[node name="gun" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="RayCast_player" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 200 )

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="Timer_rand_shoot" to="." method="_on_Timer_rand_shoot_timeout"]
